tests/ui/associated-type-bounds/return-type-notation/path-unsatisfied.stderr
error[E0277]: `*mut ()` cannot be sent between threads safely
  --> $DIR/path-unsatisfied.rs:22:12
   |
LL |     fn method() -> impl Sized {
   |                    ---------- within this `impl Sized`
...
LL |     test::<DoesntWork>();
   |            ^^^^^^^^^^ `*mut ()` cannot be sent between threads safely
   |
   = help: within `impl Sized`, the trait `Send` is not implemented for `*mut ()`
note: required because it appears within the type `impl Sized`
  --> $DIR/path-unsatisfied.rs:9:20
   |
LL |     fn method() -> impl Sized {
   |                    ^^^^^^^^^^
note: required by a bound in `test`
  --> $DIR/path-unsatisfied.rs:17:20
   |
LL | fn test<T: Trait>()
   |    ---- required by a bound in this function
LL | where
LL |     T::method(..): Send,
   |                    ^^^^ required by this bound in `test`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
